Change - wrap logo to link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 					</div>
 					<div class="row">
 						<section class="col-xs-12">
-							<img src="img/grundfos.png" class="img-responsive logo">
+							<a href="http://www.grundfos.com/">
+								<img src="img/grundfos.png" class="img-responsive logo" alt="Grundfos">
+							</a>
 						</section>
 					</div>
 				</header>
