Change - reset btn, fix padding

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<div class="container">
 					<div class="row subheader">
 						<section class="col-xs-10">
-							<ul class="list-inline">
+							<ul class="list-inline list-left">
 								<li class="language">{{ user.language }}</li>
 								<li>
 									<span class="name">{{ user.name }}</span>
@@ -91,7 +91,7 @@
 						</section>
 						<section class="col-xs-2">
 							<ul class="list-inline text-right">
-								<li>Reset</li>
+								<li><button class="btn btn-default btn-sm">Reset</button></li>
 							</ul>
 						</section>
 					</div>
