--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 					</div>
 					<!-- Languages -->
 					<div class="row">
+						<!-- English -->
 						<section class="col-lg-6 col-lg-offset-3">
 							<div class="panel panel-default">
 								<header class="panel-heading">
@@ -126,13 +127,31 @@
 								</footer>
 							</div>
 						</section>
+						<!-- Danish -->
+						<section class="col-lg-6 col-lg-offset-3">
+							<div class="panel panel-default">
+								<header class="panel-heading">
+									<h3>Dansk</h3>
+								</header>
+								<img src="http://placehold.it/500x250" class="panel-image">
+								<footer class="panel-footer">
+									<div class="row">
+										<section class="col-xs-12">
+											<button v-on:click="selectLanguage('dansk')" class="btn btn-default pull-right">
+												Vælg
+											</button>
+										</section>
+									</div>
+								</footer>
+							</div>
+						</section>
 					</div>
 				</section>
 				<!-- Slide Two -->
 				<section v-show="slideIndex == 1">
 					<div class="row text-center">
 						<section class="col-xs-12">
-							<h1 class="page-header">Input your information</h1>
+							<h1 class="page-header">{{ $t('information_title') }}</h1>
 						</section>
 					</div>
 					<!-- Name / Company -->
@@ -144,20 +163,20 @@
 								<section class="panel-body">
 									<form class="form-horizontal">
 										<div class="form-group">
-											<label for="name" class="col-sm-2 control-label">Name <span class="text-danger">*</span></label>
+											<label for="name" class="col-sm-2 control-label">{{ $t('information_name') }} <span class="text-danger">*</span></label>
 											<section class="col-sm-10">
 												<input v-model="user.name" id="name" class="form-control" type="text" placeholder="Jens Jensen">
 											</section>
 										</div>
 										<div class="form-group">
-											<label for="company" class="col-sm-2 control-label">Company</label>
+											<label for="company" class="col-sm-2 control-label">{{ $t('information_company') }}</label>
 											<section class="col-sm-10">
 												<input v-model="user.company" id="company" class="form-control" type="text" placeholder="Firma A/S">
 											</section>
 										</div>
 										<div class="form-group">
 											<section class="col-sm-12">
-												<p class="text-danger">* Required</p>
+												<p class="text-danger">* {{ $t('information_required') }}</p>
 											</section>
 										</div>
 									</form>
@@ -166,12 +185,12 @@
 									<div class="row">
 										<section class="col-xs-6">
 											<button v-show="slideIndex > 0" v-on:click="prevSlide" class="btn btn-default">
-												Previous
+												{{ $t('slide_previous') }}
 											</button>
 										</section>
 										<section class="col-xs-6">
 											<button v-show="user.name !== ''" v-on:click="nextSlide" class="btn btn-default pull-right">
-												Next
+												{{ $t('slide_next') }}
 											</button>
 										</section>
 									</div>
@@ -184,7 +203,7 @@
 				<section v-show="slideIndex == 2">
 					<div class="row text-center">
 						<section class="col-xs-12">
-							<h1 class="page-header">Guidelines</h1>
+							<h1 class="page-header">{{ $t('guidelines') }}</h1>
 						</section>
 					</div>
 					<!-- Guidelines -->
@@ -209,12 +228,12 @@
 									<div class="row">
 										<section class="col-xs-6">
 											<button v-show="slideIndex > 0" v-on:click="prevSlide" class="btn btn-default">
-												Previous
+												{{ $t('slide_previous') }}
 											</button>
 										</section>
 										<section class="col-xs-6">
 											<button v-on:click="nextSlide" class="btn btn-default pull-right">
-												Next
+												{{ $t('slide_next') }}
 											</button>
 										</section>
 									</div>
@@ -227,7 +246,7 @@
 				<section v-show="slideIndex == 3">
 					<div class="row text-center">
 						<section class="col-xs-12">
-							<h1 class="page-header">Recommendations</h1>
+							<h1 class="page-header">{{ $t('recommendations') }}</h1>
 						</section>
 					</div>
 					<!-- Recommendations -->
@@ -252,12 +271,12 @@
 									<div class="row">
 										<section class="col-xs-6">
 											<button v-show="slideIndex > 0" v-on:click="prevSlide" class="btn btn-default">
-												Previous
+												{{ $t('slide_previous') }}
 											</button>
 										</section>
 										<section class="col-xs-6">
 											<button v-on:click="nextSlide" class="btn btn-default pull-right">
-												Next
+												{{ $t('slide_next') }}
 											</button>
 										</section>
 									</div>
@@ -304,18 +323,18 @@
 										<!-- Message -->
 										<section class="col-xs-12 col-md-8 col-md-push-2">
 											<p v-if="question.answered" class="text-center">
-												<span v-bind:class="question.correct ? 'text-success' : 'text-danger'">{{ question.message }}</span>
+												<span v-bind:class="question.correct ? 'text-success' : 'text-danger'">{{ $t('quiz_error') }}</span>
 											</p>
 										</section>
 										<!-- Buttons -->
 										<section class="col-xs-6 col-md-2 col-md-pull-8">
 											<button v-on:click="prev" class="btn btn-default">
-												Previous
+												{{ $t('slide_previous') }}
 											</button>
 										</section>
 										<section class="col-xs-6 col-md-2">
 											<button v-on:click="next" class="btn btn-default pull-right">
-												Next
+												{{ $t('slide_next') }}
 											</button>
 										</section>
 									</div>
@@ -384,6 +403,7 @@
 		<script type="text/javascript" src="js/modernizr.min.js"></script>
 		<!-- <script src="js/vue.min.js"></script> -->
 		<script type="text/javascript" src="js/vue.js"></script>
+		<script type="text/javascript" src="js/polyglot.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 	</body>
 </html>
