Change - refactor quiz header

--- a/index.html
+++ b/index.html
@@ -290,8 +290,7 @@
 					<!-- Quiz -->
 					<div class="row text-center">
 						<section class="col-xs-12">
-							<h1>{{ quiz.title }} <small v-show="questionIndex < quiz.questions.length">{{ questionIndex + 1 }} / {{ quiz.questions.length }}</small></h1>
-							<hr>
+							<h1 class="page-header">Quiz <small v-show="questionIndex < quiz.questions.length">{{ questionIndex + 1 }} / {{ quiz.questions.length }}</small></h1>
 						</section>
 					</div>
 					<!-- Questions -->
