--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 											</button>
 										</section>
 										<section class="col-xs-6 col-md-2">
-											<button v-on:click="next" class="btn btn-default pull-right">
+											<button v-on:click="next" :disabled="responses[index] == undefined" class="btn btn-default pull-right">
 												{{ $t('slide_next') }}
 											</button>
 										</section>
