Add - reset translated

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						</section>
 						<section class="col-xs-2">
 							<ul class="list-inline text-right">
-								<li><button class="btn btn-default btn-sm">Reset</button></li>
+								<li><button class="btn btn-default btn-sm">{{ $t('subheader_reset') }}</button></li>
 							</ul>
 						</section>
 					</div>
