Change - add language flags, add social media, fix cols

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 					<!-- Languages -->
 					<div class="row">
 						<!-- English -->
-						<section class="col-lg-6 col-lg-offset-3">
+						<section class="col-lg-offset-2 col-lg-4 col-md-offset-1 col-md-5">
 							<div class="panel panel-default">
 								<header class="panel-heading">
 									<h3>English</h3>
 								</header>
-								<img src="http://placehold.it/500x250" class="panel-image">
+								<img src="img/languages/english.png" class="panel-image">
 								<footer class="panel-footer">
 									<div class="row">
 										<section class="col-xs-12">
@@ -128,12 +128,12 @@
 							</div>
 						</section>
 						<!-- Danish -->
-						<section class="col-lg-6 col-lg-offset-3">
+						<section class="col-lg-4 col-md-5">
 							<div class="panel panel-default">
 								<header class="panel-heading">
 									<h3>Dansk</h3>
 								</header>
-								<img src="http://placehold.it/500x250" class="panel-image">
+								<img src="img/languages/danish.png" class="panel-image">
 								<footer class="panel-footer">
 									<div class="row">
 										<section class="col-xs-12">
@@ -382,15 +382,13 @@
 					</address>
 				</section>
 			</div>
-			<div class="row hidden-print">
+			<div class="row hidden-print small">
 				<section class="col-xs-12">
 					<ul class="list-inline">
-						<li><a href="#">Legal Issues</a></li>
-						<li><a href="#">Contact Grundfos</a></li>
-						<li>YouTube</li>
-						<li>Twitter</li>
-						<li>LinkedIn</li>
-						<li>Facebook</li>
+						<li><a href="http://www.grundfos.com/navfooter/legal-issues.html">Legal Issues</a></li>
+						<li><a href="http://www.grundfos.com/navfooter/contact-grundfos.html">Contact Grundfos</a></li>
+						<li><a href="http://www.linkedin.com/company/grundfos-holding-a-s"><img src="img/linkedin.png"></a></li>
+						<li><a href="https://www.facebook.com/Grundfos-454724341400431/?fref=ts"><img src="img/facebook.png"></a></li>
 					</ul>
 				</section>
 			</div>
