--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<meta name="description" content="Grundfos has a global presence and is a full range supplier within pumps for heating, air conditioning, irrigation, industry, groundwater, boosting and water treatment.">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link rel="apple-touch-icon" href="apple-touch-icon.png">
-		<!-- Place favicon.ico in the root directory -->
+		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+		<link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
 
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/app.css">
