Change - fix title to reflect grundfos' own

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Grundfos – Safety</title>
+		<title>Safety | Grundfos</title>
 		<meta name="description" content="Grundfos has a global presence and is a full range supplier within pumps for heating, air conditioning, irrigation, industry, groundwater, boosting and water treatment.">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
