Change- comment out english lang select for now

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					</div>
 					<!-- Languages -->
 					<div class="row">
-						<!-- English -->
+						<!-- English
 						<section class="col-lg-offset-2 col-lg-4 col-md-offset-1 col-md-5">
 							<div class="panel panel-default">
 								<header class="panel-heading">
@@ -127,6 +127,7 @@
 								</footer>
 							</div>
 						</section>
+						-->
 						<!-- Danish -->
 						<section class="col-lg-4 col-md-5">
 							<div class="panel panel-default">
