--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-		<link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
+		<link rel="shortcut icon" type="image/ico" href="favicon.ico">
 
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/app.css">
