--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			</div>
 
 			<!-- Subheader -->
-			<div class="subheader-wrapper" v-cloak>
+			<div class="subheader-wrapper hidden-print" v-cloak>
 				<div class="container">
 					<div class="row subheader">
 						<section class="col-xs-10">
@@ -91,7 +91,7 @@
 						</section>
 						<section class="col-xs-2">
 							<ul class="list-inline text-right">
-								<li><button class="btn btn-default btn-sm">{{ $t('subheader_reset') }}</button></li>
+								<li><button v-on:click="reset" class="btn btn-default btn-sm">{{ $t('subheader_reset') }}</button></li>
 							</ul>
 						</section>
 					</div>
@@ -342,23 +342,43 @@
 							</div>
 						</section>
 					</div>
+				</section>
+				<!-- Slide Six -->
+				<section v-show="slideIndex == 5">
 					<!-- Results -->
-					<!-- TODO: Refactor -->
-					<div class="row results" v-show="questionIndex === quiz.questions.length">
+					<div class="row text-center">
+						<section class="col-xs-12">
+							<h1 class="page-header">{{ $t('results_header_1') }}</h1>
+						</section>
+					</div>
+					<div class="row results">
 						<section class="col-lg-offset-3 col-lg-6 text-center">
-							<div v-if="score() === quiz.questions.length">
-								<img src="img/emoticons-laugh.png" class="img-responsive center-block">
-								<h2>Congratulations!</h2>
-								<h4>You passed the quiz</h4>
-								<p class="lead">Score: {{ score() }} / {{ quiz.questions.length }}</p>
+							<img src="img/emoticons-laugh.png" class="img-responsive center-block">
+							<h2>{{ $t('results_header_2') }}</h2>
+							<p>{{ $t('results_instructions') }}</p>
+							<div class="row information">
+								<section class="col-xs-4">
+									<p class="strong">{{ $t('results_name') }}</p>
+									<p>{{ user.name }}</p>
+								</section>
+								<section class="col-xs-4">
+									<p class="strong">{{ $t('results_company') }}</p>
+									<p>{{ user.company ? user.company : 'N/A'  }}</p>
+								</section>
+								<section class="col-xs-4">
+									<p class="strong">{{ $t('results_datetime') }}</p>
+									<p>{{ date() }}</p>
+								</section>
 							</div>
-
-							<div v-if="score() < quiz.questions.length">
-								<img src="img/emoticons-cry.png" class="img-responsive center-block">
-								<h2>Oops, try again!</h2>
-								<h4>You failed the quiz</h4>
-								<p class="lead">Score: {{ score() }} / {{ quiz.questions.length }}</p>
-							</div>
+							<p>{{ $t('results_goodbye') }}</p>
+						</section>
+					</div>
+					<div class="row hidden-print">
+						<section class="col-lg-offset-3 col-lg-6 text-center">
+							<hr>
+							<button v-on:click="reset" class="btn btn-default btn-lg">{{ $t('subheader_reset') }}</button>
+							<div class="clearfix"></div>
+							<br>
 						</section>
 					</div>
 				</section>
@@ -401,6 +421,7 @@
 		<script type="text/javascript" src="js/modernizr.min.js"></script>
 		<!-- <script src="js/vue.min.js"></script> -->
 		<script type="text/javascript" src="js/vue.js"></script>
+		<script type="text/javascript" src="js/moment-with-locales.min.js"></script>
 		<script type="text/javascript" src="js/polyglot.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 	</body>
