--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
 					<div class="row navigation">
 						<section class="col-xs-12">
 							<ul class="list-inline">
-								<li><a href="#">Home</a></li>
-								<li><a href="#">Contact us</a></li>
+								<li><a href="http://www.grundfos.com/nav/extranet.html">Extranet</a></li>
+								<li><a href="http://www.grundfos.com/nav/sitemap.html">Sitemap</a></li>
+								<li><a href="http://www.grundfos.com/nav/contact.html">Contact</a></li>
 							</ul>
 						</section>
 					</div>
