--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
 		<script type="text/javascript" src="js/modernizr.min.js"></script>
 		<!-- <script src="js/vue.min.js"></script> -->
 		<script type="text/javascript" src="js/vue.js"></script>
+		<script type="text/javascript" src="js/vue-resource.js"></script>
 		<script type="text/javascript" src="js/moment-with-locales.min.js"></script>
 		<script type="text/javascript" src="js/polyglot.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
