--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						</section>
 						-->
 						<!-- Danish -->
-						<section class="col-lg-offset-2 col-lg-4 col-md-offset-1 col-md-5">
+						<section class="col-lg-offset-4 col-lg-4">
 						<!-- <section class="col-lg-4 col-md-5"> -->
 							<div class="panel panel-default">
 								<header class="panel-heading">
