Change - rename danish flag img

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 								<header class="panel-heading">
 									<h3>Dansk</h3>
 								</header>
-								<img src="img/languages/danish.png" class="panel-image">
+								<img src="img/languages/dansk.png" class="panel-image">
 								<footer class="panel-footer">
 									<div class="row">
 										<section class="col-xs-12">
