--- a/index.html
+++ b/index.html
@@ -429,6 +429,9 @@
 		<script type="text/javascript" src="js/vue-resource.js"></script>
 		<script type="text/javascript" src="js/moment-with-locales.min.js"></script>
 		<script type="text/javascript" src="js/polyglot.min.js"></script>
+		<script type="text/javascript" src="js/polyfill-object-assign.js"></script>
+		<script type="text/javascript" src="js/polyfill-promise.min.js"></script>
+		<script type="text/javascript" src="js/fetch.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 	</body>
 </html>
