--- a/index.html
+++ b/index.html
@@ -171,18 +171,20 @@
 										<div class="form-group">
 											<label for="name" class="col-sm-2 control-label">{{ $t('information_name') }} <span class="text-danger">*</span></label>
 											<section class="col-sm-10">
-												<input v-model="user.name" id="name" class="form-control" type="text" placeholder="Jens Jensen">
+												<input v-model="user.name" id="name" class="form-control" type="text" :placeholder="$t('information_name_placeholder')">
+												<div class="help-block">
+													<span class="text-danger">* {{ $t('information_required') }}</span>
+												</div>
 											</section>
 										</div>
 										<div class="form-group">
 											<label for="company" class="col-sm-2 control-label">{{ $t('information_company') }}</label>
 											<section class="col-sm-10">
-												<input v-model="user.company" id="company" class="form-control" type="text" placeholder="Firma A/S">
+												<input v-model="user.company" id="company" class="form-control" type="text" :placeholder="$t('information_company_placeholder')">
 											</section>
 										</div>
 										<div class="form-group">
 											<section class="col-sm-12">
-												<p class="text-danger">* {{ $t('information_required') }}</p>
 											</section>
 										</div>
 									</form>
